# ChangeLog for mail-filter/dspam
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-filter/dspam/ChangeLog,v 1.131 2010/06/17 21:44:20 patrick Exp $

  17 Jun 2010; Patrick Lauer <patrick@gentoo.org> dspam-3.8.0-r15.ebuild:
  Really migrating away from deprecated postgres virtuals

  17 Jun 2010; Patrick Lauer <patrick@gentoo.org> dspam-3.8.0-r15.ebuild:
  Migrating away from deprecated postgres virtuals

  02 Dec 2009; Alin Năstac <mrness@gentoo.org> dspam-3.8.0-r15.ebuild:
  Fix parallel make issue (#294970).

  01 Dec 2009; Alin Năstac <mrness@gentoo.org> dspam-3.8.0-r15.ebuild:
  Fix sqlite configure error on systems with libtool-2 (#292715).

  09 May 2009; Alin Năstac <mrness@gentoo.org> dspam-3.8.0-r15.ebuild:
  Migrate to EAPI 2.

  12 Jan 2009; Alin Năstac <mrness@gentoo.org> -dspam-3.8.0-r13.ebuild,
  -dspam-3.8.0-r14.ebuild:
  Remove obsolete versions.

  07 Nov 2008; Raúl Porcel <armin76@gentoo.org> dspam-3.8.0-r15.ebuild:
  sparc stable wrt #244232

  19 Oct 2008; Markus Meier <maekke@gentoo.org> dspam-3.8.0-r15.ebuild:
  amd64/x86 stable, bug #242756

*dspam-3.8.0-r15 (05 Oct 2008)

  05 Oct 2008; Alin Năstac <mrness@gentoo.org> metadata.xml,
  +dspam-3.8.0-r15.ebuild:
  Add debug-bnr and debug-verbose USE flags (#237606).

*dspam-3.8.0-r14 (13 Sep 2008)

  13 Sep 2008; Alin Năstac <mrness@gentoo.org> -dspam-3.8.0-r11.ebuild,
  +dspam-3.8.0-r14.ebuild:
  Add the complete email address to recipient list when StripRcptDomain option
  is activated (#231175).

  21 Aug 2008; Friedrich Oslage <bluebird@gentoo.org>
  dspam-3.8.0-r13.ebuild:
  Stable on sparc, bug #235261

  20 Aug 2008; Markus Meier <maekke@gentoo.org> metadata.xml,
  dspam-3.8.0-r13.ebuild:
  amd64/x86 stable, bug #235261; add GLEP 56 USE flag desc from
  use.local.desc

*dspam-3.8.0-r13 (20 Aug 2008)

  20 Aug 2008; Alin Năstac <mrness@gentoo.org> files/logrotate.dspam,
  -dspam-3.8.0-r12.ebuild, +dspam-3.8.0-r13.ebuild: