@@ -1,0 +1,45 @@
+#!/sbin/runscript
+# Copyright 1999-2011 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/mail-filter/dspam/files/dspam.initd,v 1.1 2011/08/05 06:42:42 eras Exp $
+
+opts="${opts} reload"
+PIDFILE=${PID_FILE:-/var/run/dspam/dspam.pid}
+
+depend() {
+	use logger
+	before mta
+	after postgresql mysql ldap
+}
+
+checkconfig() {
+	local PIDDIR
+	PIDDIR=${PIDFILE%/*}
+	if [ ! -d "${PIDDIR:-/var/run/dspam}" ]; then
+		checkpath -q -d -o dspam:dspam -m 0770 "${PIDDIR}" || return 1
+	fi
+}
+
+start() {
+	checkconfig || return 1
+	ebegin "Starting dspam"
+	start-stop-daemon --start \
+		--user ${DAEMON_USER_GROUP} \
+		--pidfile ${PIDFILE} \
+		--exec /usr/bin/dspam -- --daemon
+	eend $?
+}
+
+stop() {
+	ebegin "Stopping dspam"
+	start-stop-daemon --stop \
+		--pidfile ${PIDFILE} \
+		--exec /usr/bin/dspam
+	eend $?
+}
+
+reload() {
+	ebegin "Reloading dspam"
+	start-stop-daemon --signal SIGHUP /usr/bin/dspam 
+	eend $?
+}
